--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   get: ^4.3.8
+  connectivity_plus: ^1.0.6
 
 dev_dependencies:
   flutter_test:
