--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   google_fonts: ^2.1.0
   get: ^4.3.8
   connectivity_plus: ^1.0.6
+  firebase_core: ^1.7.0
+  firebase_auth: ^3.1.2
+  google_sign_in: ^5.1.1
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
