--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^3.1.2
   google_sign_in: ^5.1.1
   flutter_signin_button: ^2.0.0
+  firebase_database: ^8.0.0
 
 dev_dependencies:
   flutter_test:
