--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_sign_in: ^5.1.1
   flutter_signin_button: ^2.0.0
   firebase_database: ^8.0.0
+  cloud_firestore: ^2.5.3
 
 dev_dependencies:
   flutter_test:
