--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   firebase_database: ^8.0.0
   cloud_firestore: ^2.5.3
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
