--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   firebase_database: ^8.0.0
   cloud_firestore: ^2.5.3
   shared_preferences: ^2.0.8
-  permission_handler: ^7.2.0
+  permission_handler: ^8.2.2
+  geolocator: ^7.7.0
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
