--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^7.7.0
   url_launcher: ^6.0.12
   flutter_local_notifications: ^9.0.0
+  workmanager: ^0.4.1
 
 dev_dependencies:
   flutter_test:
